force-app/main/default/objects/Mateco_Customer_Carte_Status__c/Mateco_Customer_Carte_Status__c.object-meta.xml
<CustomObject>
    <label>マテコ顧客カルテ</label>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>マテコ顧客カルテ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>