force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>マテコ顧客カルテ</relationshipLabel>
    <relationshipName>Account_Mateco_Customer_Carte_Status</relationshipName>
    <type>Lookup</type>
</CustomField>