force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/collision_info__c.field-meta.xml
<CustomField>
    <fullName>collision_info__c</fullName>
    <label>競合情報</label>
    <type>TextArea</type>
</CustomField>