force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/commercial_distribution__c.field-meta.xml
<CustomField>
    <fullName>commercial_distribution__c</fullName>
    <label>商流</label>
    <length>255</length>
    <type>Text</type>
</CustomField>