force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/current_term_sales_amount__c.field-meta.xml
<CustomField>
    <fullName>current_term_sales_amount__c</fullName>
    <label>今期_売上見込額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>