force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/first_term_income_amount__c.field-meta.xml
<CustomField>
    <fullName>first_term_income_amount__c</fullName>
    <label>前期_利益額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>