force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/handling_products__c.field-meta.xml
<CustomField>
    <fullName>handling_products__c</fullName>
    <label>取扱商材</label>
    <length>255</length>
    <type>Text</type>
</CustomField>