force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/history__c.field-meta.xml
<CustomField>
    <fullName>history__c</fullName>
    <label>取引履歴</label>
    <type>TextArea</type>
</CustomField>