force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/industries__c.field-meta.xml
<CustomField>
    <fullName>industries__c</fullName>
    <label>業種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>