force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/key_man__c.field-meta.xml
<CustomField>
    <fullName>key_man__c</fullName>
    <label>担当/キーマン情報</label>
    <type>TextArea</type>
</CustomField>