force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/needs__c.field-meta.xml
<CustomField>
    <fullName>needs__c</fullName>
    <label>ニーズ・課題/これらの目の付け所</label>
    <type>TextArea</type>
</CustomField>