force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/next_term_planning_sales_amount__c.field-meta.xml
<CustomField>
    <fullName>next_term_planning_sales_amount__c</fullName>
    <label>来期計画_売上額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>