force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/notice__c.field-meta.xml
<CustomField>
    <fullName>notice__c</fullName>
    <label>その他　特記事項等</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>