force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/outsourcing_info__c.field-meta.xml
<CustomField>
    <fullName>outsourcing_info__c</fullName>
    <label>外注情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>