force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/second_preceding_period_income_amount__c.field-meta.xml
<CustomField>
    <fullName>second_preceding_period_income_amount__c</fullName>
    <label>前々期_利益額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>