force-app/main/default/objects/Mateco_Customer_Carte_Status__c/fields/story__c.field-meta.xml
<CustomField>
    <fullName>story__c</fullName>
    <label>成功談・失敗談　等</label>
    <type>TextArea</type>
</CustomField>